pkl-core/src/test/files/LanguageSnippetTests/input/errors/power/typeConstraints17.pkl
local name = "Bob"
local function greet(name: String) = "Hello, \(name)"

foo: Any(greet(name) == "Hello, \(name)!") = null
